Фикс абуза новой жизни. В новой жизни нельзя стать антагом. Таймер на новую жизнь с входа в раунд.
(cherry picked from commit 917645d0d078ceef9c096e5d7b4fef36eec63275)

--- a/Content.Client/_Alteros/NewLife/NewLifeWindow.xaml
+++ b/Content.Client/_Alteros/NewLife/NewLifeWindow.xaml
@@ -1,10 +1,10 @@
 <DefaultWindow xmlns="https://spacestation14.io"
             Title="{Loc 'new-life-gui-window-title'}"
-            MinSize="350 200"
-            SetSize="350 200">
+            MinSize="450 200"
+            SetSize="450 200">
     <BoxContainer Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True" Margin="5 5 5 5">
         <GridContainer Columns="2"
-                       HorizontalAlignment="Stretch"
+                       HorizontalAlignment="Center"
                        VerticalAlignment="Top" Margin="5 5 5 5">
             <Label Text="{Loc 'new-life-gui-character-selector'}" StyleClasses="LabelKeyText"/>
             <OptionButton Name="CharacterSelector" />
