--- a/Content.Client/_Alteros/DiscordMember/DiscordMemberGui.xaml
+++ b/Content.Client/_Alteros/DiscordMember/DiscordMemberGui.xaml
@@ -1,7 +1,8 @@
 <Control xmlns="https://spacestation14.io"
           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
           xmlns:parallax="clr-namespace:Content.Client.Parallax"
-          xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls">
+          xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
+          xmlns:graphics="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client">
     <parallax:ParallaxControl />
     <Control HorizontalAlignment="Center" VerticalAlignment="Center">
         <PanelContainer StyleClasses="AngleRect" />
@@ -13,19 +14,31 @@
                         HorizontalAlignment="Right" HorizontalExpand="True" />
             </BoxContainer>
             <controls:HighDivider />
-            <BoxContainer Orientation="Vertical" Margin="50 20 50 20">
+            <BoxContainer Orientation="Vertical" Margin="10 25 10 0">
                 <Label Text="{Loc 'discord-member-info'}" Align="Center" />
-                <Label Text="{Loc 'discord-member-warn'}" Margin="0 5 0 0" Align="Center" StyleClasses="LabelSubText" />
             </BoxContainer>
-            <BoxContainer Orientation="Vertical" VerticalAlignment="Bottom" Margin="10 0 0 0">
+            <BoxContainer Orientation="Vertical" Margin="10 25 10 0">
+                <Label Text="{Loc 'discord-member-warn'}" Align="Center" StyleClasses="LabelKeyText"/>
+                <BoxContainer Orientation="Horizontal" Align="Center">
+                    <Label Text="{Loc 'discord-member-username'}" StyleClasses="LabelKeyText"/>
+                    <Label Text=" "/>
+                    <Label Name="DiscordUsername" />
+                </BoxContainer>
+            </BoxContainer>
+            <BoxContainer Orientation="Vertical" VerticalAlignment="Bottom" Margin="0 25 0 0">
                 <Label Text="{Loc 'discord-member-qrcode'}" Align="Center" />
-                <TextureRect Name="QrCode" MaxHeight="400" HorizontalAlignment="Center" Margin="10 0 0 0"></TextureRect>
+                <TextureRect Name="QrCode" MaxHeight="400" HorizontalAlignment="Center" Margin="10 10 10 10"></TextureRect>
             </BoxContainer>
-            <BoxContainer Orientation="Horizontal" VerticalAlignment="Bottom" Margin="10 0 0 0">
-                <Label Text="{Loc 'discord-member-link'}" Align="Center" />
-                <Label Text=" " />
-                <TextEdit Name="UrlEdit" HorizontalExpand="True" Editable="False" VerticalExpand="True" MinSize="220 50" Margin="10"></TextEdit>
-            </BoxContainer>
+            <PanelContainer Name="InputContainer"
+                            VerticalAlignment="Stretch"
+                            VerticalExpand="True"
+                            HorizontalExpand="True"
+                            Margin="10 0 10 10">
+                <PanelContainer.PanelOverride>
+                    <graphics:StyleBoxFlat BackgroundColor="#333237"/>
+                </PanelContainer.PanelOverride>
+                <TextEdit Name="UrlEdit" Access="Public" MinSize="300 100"/>
+            </PanelContainer>
             <Button Name="OpenUrlButton" Text="{Loc 'discord-member-browser-btn'}" HorizontalExpand="True" StyleClasses="OpenRight" />
         </BoxContainer>
     </Control>
