--- a/Content.Client/_Alteros/NewLife/NewLifeWindow.xaml
+++ b/Content.Client/_Alteros/NewLife/NewLifeWindow.xaml
@@ -1,13 +1,15 @@
 <DefaultWindow xmlns="https://spacestation14.io"
             Title="{Loc 'new-life-gui-window-title'}"
-            MinSize="450 200"
-            SetSize="450 200">
+            SetSize="550 350"
+            Resizable="False">
     <BoxContainer Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True" Margin="5 5 5 5">
         <GridContainer Columns="2"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Top" Margin="5 5 5 5">
             <Label Text="{Loc 'new-life-gui-character-selector'}" StyleClasses="LabelKeyText"/>
             <OptionButton Name="CharacterSelector" />
+            <Label Text="{Loc 'new-life-gui-station-selector'}" StyleClasses="LabelKeyText"/>
+            <OptionButton Name="StationSelector" StyleClasses="OpenRight" Access="Public" HorizontalAlignment="Center"/>
             <Label Text="{Loc 'new-life-gui-role-selector'}" StyleClasses="LabelKeyText"/>
             <OptionButton Name="RoleSelector" />
         </GridContainer>
